public/css/style.css
/* ... */
.contact-page .direction-new a,
.contact-page .direction-new a:hover {
    width: auto !important;
    height: auto !important;
    background: transparent;
    border: transparent;
    margin-left: 0;
    gap: 10px;
    text-decoration: unset;
}

.contact-page .direction-new span {
    color: #f4f4f4;
}

.contact-page .direction-new .btnWithRightArrow,
.contact-page .direction-new a:hover .btnWithRightArrow,
.contact-page .direction-new .btnWithRightArrow:hover {
    background-color: #f7941e !important;
    border: 1px solid #f7941e !important;
    width: 30px;
    height: 30px;
    display: flex;
    align-items: center;
    justify-content: center;
        border-radius: 4px;
}


.career-topSection .backToList {
    margin: 0;
    height: auto;
}

.career-topSection {
    display: flex;
    align-items: center;
    gap: 32px;
}

.career-topSection .title-desc {
    margin: 0;
}

.tellUsAccordion .accordion-body {
    padding-top: 64px;
}

.team-members-ui .team-card .card {
    overflow: hidden;
}

.team-members-ui .team-card img {
    border-radius: 0 !important;
}


.homepage .all-services .removeUnderline {
    margin-bottom: 8px;
    border: 1px solid transparent;
    background-color: #1b1b1b;
    display: block;
    padding: 28px 40px;
    border-radius: 12px;
    transition: all .3s ease-in-out;
    height: calc(100% - 8px);
}

.homepage .all-services .removeUnderline:hover {
    border: 1px solid #f7941e;
}

.homepage .all-services .removeUnderline:hover .service-name-new,
.common-ui .removeUnderline:hover .service-name-new {
    color: #f7941e !important;
}

.static-pages{
    padding:55px 80px 149px 80px;
    margin-top:96px;
}

.static-pages h1{
    margin:0px;
    margin-bottom:100px;
    font-weight: 500;
    font-size: 56px;
    line-height: 60px;
    color:#1B1B1B;
}

.static-content p,
.static-content h2,
.static-content ul{
    margin:0px;
}



.static-content p,
.static-content h2,
.static-content li{
    font-weight: 400;
    font-size: 24px;
    color:#1B1B1B;
    line-height: 32px;
}

.content-divide{
    margin-bottom:72px;
}

.content-divide:last-child{
    margin-bottom:0 !important;
}

.static-content h2{
    font-weight: 600 !important;
}

.static-content li{
    position:relative;
}

.static-content li::after {
    content: "";
    position: absolute;
    left: -18px;
    top: 50%;
    transform: translateY(-50%);
    width: 6px;
    height: 6px;
    background-color: #1b1b1b;
    border-radius: 50%;
}

.static-content li b{
    font-weight:600;
}

.static-content p a{
    color:#f7941e;
    text-decoration: none !important;
}


.static-content table{
    margin:0px;
}

.static-content table thead tr th,
.static-content table tbody tr td{
    font-weight: 500;
    font-size: 19px;
    color:#1B1B1B !important;
    line-height: 28px;
    padding:0px;
}

.static-content table thead tr th{
    font-weight:600 !important;
}

.static-content table tbody tr td[scope="row"] {
  font-weight: 600 !important;
}

.static-content table thead tr th{
    border-bottom:1px solid #68686A;
    padding:12px 0px 8px 0px;
}

.static-content table thead tr th:first-child,
.static-content table tbody tr td:first-child{
    padding-left:16px;
}

.static-content table tbody tr td{
    padding:12px 0px 12px 0px;
}

.static-content table tbody tr:nth-child(odd) {
  background-color: #E7E7E8;
}

.blankli{
    height: 28px;
}

.static-content.csr-div .content-divide{
    margin-bottom:42px
}

.static-content.csr-div .content-divide p{
    margin-bottom:30px;
}

.static-content.csr-div .content-divide p:last-child{
    margin-bottom:42px;
}

.csr-div .csr-logo{
    display: inline-flex;
    gap: 40px;
}

.csr-div .csr-logo img{
    mix-blend-mode: multiply;
}

.pdf-content{
    margin-top:100px;
    margin-bottom:0;
}

.pdf-content a img{
    box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.15);
    margin-bottom:16px;
}

.pdf-content a{
    height: auto;
    display: inline-block;
    width: auto;
    color: #121212;
    font-weight: 500;
    font-size: 20px;
    line-height: 100%;
    text-transform: initial;
    letter-spacing: normal;
    text-decoration: none;
}

.pdf-content a span{
      display: block;
    vertical-align: middle;
}

.pdf-content a .arrowbg{
   background-color: #f7941e;
    border-radius: 4px;
    padding: 0;
    width: 30px;
    height: 30px;
    display: inline-block;
    justify-content: center;
    vertical-align: middle;
    margin-left: 12px;
    text-align: center;
    line-height: 27px;
}

.pdf-content a:hover .arrowbg img{
    filter: unset !important;
    animation: arrowFly .35s ease-in-out forwards;
}

.pdf-content a .arrowbg img{
    box-shadow: none;
    margin: 0;
    display: inline-block;
}

.pdf-content a .pdf-image{
    border-radius: 4px;
    border:1px solid transparent;
}

.pdf-content a:hover .pdf-image{
    border:1px solid #F7941E;
}

.blankdiv-bg{
    height:500px;
    background:#1B1B1B;
}

